allow registration
